corretto qualche bug